Open rewrite fixes