@@ -30,10 +30,7 @@ import java.util.List;
 import java.util.Map;
 
 import static io.restassured.RestAssured.given;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.*;
 
 @DisplayName("Tests Token integration with Keycloak")
 public class TokenKeycloakITTest extends KeycloakITBase {
@@ -116,7 +113,7 @@ public class TokenKeycloakITTest extends KeycloakITBase {
                 .formParams(parameter)
                 .post(getTokenUrl()).then().assertThat().statusCode(200)
                 .extract().path(tokenType);
-        LOGGER.info(() -> String.format("Received %s: %s", tokenType, tokenString));
+        LOGGER.info(() -> "Received %s: %s".formatted(tokenType, tokenString));
         return tokenString;
     }
 }
